# build-env

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bryllite-core/: CMakeLists.txt  main.cpp
bryllite-test/: CMakeLists.txt  test.cpp
build.win32/: README.md
include/: version.h.in  version.hpp
include/utils/: singleton.hpp  string.hpp
utils/: CMakeLists.txt  string.cpp
